# db-query-analysis-agent

./: .env.example  .gitignore  CLAUDE.md  README.md  bootstrap.sh  pyproject.toml
agents/db_query_analysis_agent/local/: chat.py  run.py
agents/db_query_analysis_agent/meta/: __init__.py  mock_backend.py  redis_backend.py  sqlite_backend.py
agents/db_query_analysis_agent/runtime/: _remote.py  agentcore_runtime.py  chat.py  deploy_runtime.py  invoke_runtime.py  requirements.txt  teardown.sh
agents/db_query_analysis_agent/shared/: agent.py  (+3 more)
data/: schema.sql
data/mock/: table_meta.py
data/seed/: build_sqlite.py  seed_redis.py
design/: 2026-06-03-db-query-analysis-agent-migration-spec.md  2026-06-03-db-query-analysis-agent-plan.md  2026-06-03-phase1-sqlite-plan.md  2026-06-03-phase1-sqlite-spec.md  2026-06-03-phase2-agentcore-runtime-plan.md  2026-06-03-phase2-agentcore-runtime-spec.md  2026-06-03-phase3-cognito-gateway-plan.md  2026-06-03-phase3-cognito-gateway-spec.md  prd.md  requirement.md
infra/cognito-gateway/: cleanup_gateway.py  cognito.yaml  deploy.sh  setup_gateway.py  teardown.sh
shared/: config.py  repl.py  streaming.py
tests/: test_agent_build.py  test_agent_session.py  test_analyze_sql.py  test_build_sqlite.py  test_chat_input.py  test_check_sql_rules.py  test_explain.py  test_gateway_helper.py  test_get_table_meta.py  test_lambda_handlers.py  test_meta_backend_parity.py  test_model_helper.py  test_remote_sse.py  test_repl.py  test_review_facade.py  test_runtime_entrypoint.py  test_sqlite_backend.py  test_streaming.py  test_table_meta_shape.py
(+9 files in other folders)
