[project]
name = "db-query-analysis-agent"
version = "0.1.0"
description = "MySQL/SQL 쿼리 1차 리뷰 에이전트 (Strands + Bedrock)"
requires-python = ">=3.12"
dependencies = [
    "strands-agents>=1.10.0",
    "boto3>=1.34.0",
    "python-dotenv>=1.0.0",
    "bedrock-agentcore>=1.4.0",
]

[project.optional-dependencies]
redis = ["redis>=5.0.0"]
dev = ["pytest>=8.0.0", "ruff>=0.7.0", "bedrock-agentcore-starter-toolkit>=0.1.14"]

[tool.pytest.ini_options]
pythonpath = ["."]
addopts = "-q"

[tool.uv]
package = false
