[project]
name = "db-query-analysis-agent"
version = "0.1.0"
description = "MySQL/SQL 쿼리 1차 리뷰 에이전트 (Strands + Bedrock)"
requires-python = ">=3.12"
dependencies = [
    "strands-agents>=1.10.0",
    "boto3>=1.34.0",
    "python-dotenv>=1.0.0",
    "bedrock-agentcore>=1.4.0",
]

[project.optional-dependencies]
redis = ["redis>=5.0.0"]
dev = ["pytest>=8.0.0", "ruff>=0.7.0", "bedrock-agentcore-starter-toolkit>=0.1.14"]

[tool.pytest.ini_options]
pythonpath = ["."]
addopts = "-q"
# tests/ 만 수집 — 배포 시 infra/.../lambda/ 에 생기는 벤더링 복사본(중복 agents/data)을 수집하지 않도록.
testpaths = ["tests"]

[tool.ruff]
# Lambda 디렉터리는 핸들러 + (배포 시 transient) 벤더링 복사본이 섞여 있어 제외.
# setup_gateway.py·cleanup_gateway.py 등 orchestration 코드는 정상 lint.
exclude = ["infra/cognito-gateway/lambda"]

[tool.uv]
package = false
